--- a/.github/workflows/compile-binaries.yml
+++ b/.github/workflows/compile-binaries.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - 'compile-binaries.sh'
+      - 'trigger.md'
 permissions:
   contents: write
   issues: write
