--- a/.github/workflows/compile-binaries.yml
+++ b/.github/workflows/compile-binaries.yml
@@ -3,7 +3,7 @@ name: Klipper_Compile_Binaries
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'trigger.md'
 permissions:
