--- a/.github/workflows/compile-binaries.yml
+++ b/.github/workflows/compile-binaries.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Klipper
         run: | 
           git clone https://github.com/Klipper3d/klipper
-          /klipper/scripts/install-ubuntu-2204.sh
+          /klipper/scripts/install-ubuntu-22.04.sh
 
       - name: Check out 3Dwork Auto Builder Repo repo
         uses: actions/checkout@v4
