--- a/.github/workflows/compile-binaries.yml
+++ b/.github/workflows/compile-binaries.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           # repository: Klipper3d/klipper
           github-server-url: https://github.com/Klipper3d/klipper.git
+          path: /home/runner/work/klipper_auto_builder_3dwork/klipper_auto_builder_3dwork
 
       - name: Shows files content
         run: |
@@ -34,8 +35,7 @@ jobs:
 
       - name: Install Klipper
         run: | 
-          git clone https://github.com/Klipper3d/klipper
-          /klipper/scripts/install-ubuntu-22.04.sh
+          ./klipper/scripts/install-ubuntu-22.04.sh
 
       - name: Check out 3Dwork Auto Builder Repo repo
         uses: actions/checkout@v4
