--- a/.github/workflows/compile-binaries.yml
+++ b/.github/workflows/compile-binaries.yml
@@ -36,15 +36,16 @@ jobs:
       - name: Check out 3Dwork Auto Builder Repo repo
         uses: actions/checkout@v4
         with:
-          repository: Klipper3d/klipper
           path: ${{ github.workspace }}/3dwork
-        
-      - name: Install Klipper
-        run: | 
-          chmod +x ${{ github.workspace }}/3dwork/compile-binaries.sh
-          ${{ github.workspace }}/3dwork/compile-binaries.sh
       
       - name: Shows files content
         run: |
           ls -R
+        
+      - name: Compile Klipper Firmware for Boards
+        run: | 
+          chmod +x ${{ github.workspace }}/3dwork/compile-binaries.sh
+          ${{ github.workspace }}/3dwork/compile-binaries.sh
+      
+
 
