--- a/.github/workflows/compile-binaries.yml
+++ b/.github/workflows/compile-binaries.yml
@@ -52,7 +52,7 @@ jobs:
           cd ${{ github.workspace }}/3dwork
           git config --global user.name "JJR Bot"
           git config --global user.email "jrodriguez@qitec.net"
-          git pull origin master --ff-only
+          git pull origin main --ff-only
           git add .
           git commit -m "Compiled firmware"
           git push "https://${{ github.actor }}:${{ secrets.COMMIT_TOKEN }}@github.com/${{ github.repository }}.git"
