--- a/.github/workflows/create_md_content_list.yml
+++ b/.github/workflows/create_md_content_list.yml
@@ -16,7 +16,7 @@ jobs:
         id: generate-list
         uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
-          folder-path: 'path/to/your/folder'
+          folder-path: 'firmware_binaries'
           file-extension: '.md'
           use-quiet-mode: 'yes'
           use-verbose-mode: 'yes'
