--- a/.github/workflows/CI_UpdateGists.yml
+++ b/.github/workflows/CI_UpdateGists.yml
@@ -4,7 +4,7 @@ on:
       branches:
         - main
       paths:
-        - 'readme.md'
+        - 'README.md'
 permissions:
   contents: write
   issues: write
