--- a/.github/workflows/compile-binaries.yml
+++ b/.github/workflows/compile-binaries.yml
@@ -39,13 +39,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: ${{ github.workspace }}/3dwork-klipper
+
+      - name: Shows files content 1
+        run: |
+          ls -R
         
       - name: Compile Klipper Firmware for Boards
         run: | 
           chmod +x ${{ github.workspace }}/3dwork-klipper/compile-binaries.sh
           ${{ github.workspace }}/3dwork-klipper/compile-binaries.sh
 
-      - name: Shows files content
+      - name: Shows files content 2
         run: |
           ls -R
 
