--- a/.github/workflows/compile-binaries.yml
+++ b/.github/workflows/compile-binaries.yml
@@ -41,7 +41,7 @@ jobs:
           chmod +x ${{ github.workspace }}/klipper/scripts/*.sh
           ${{ github.workspace }}/klipper/scripts/install-ubuntu-22.04.sh
 
-      - name: Check out 3Dwork Auto Builder Repo repo
+      - name: Check out 3Dwork Auto Builder Repo
         uses: actions/checkout@v4
         with:
           path: ${{ github.workspace }}/3dwork-klipper
